--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <script>
     // Add links to uploaded notes here
     const notesLinks = {
-      python: "python.pdf",   // Example: replace with your file path
+      python: "notes/python.pdf",   // Example: replace with your file path
       dbms: "",                     // empty means not uploaded yet
       coa: "",                      // not uploaded yet
       math: ""                      // not uploaded yet
@@ -88,4 +88,5 @@
 
 </body>
 </html>
+
 
